5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1798_2564.log
== SUBMITION (2019-06-05 15:32:46) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1: ")))
vet2 = array(eval(input("vetor2: ")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] == vet2[elemento]):
		vetn[1] = vetn[1] + 1
	elif(vet1[elemento] < vet[elemento]):
		vetn[2] = vetn[2] + 1
print(vetn)
-- EXECUTION TIME:
0.743787
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 12, in <module>
    elif(vet1[elemento] < vet[elemento]):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:33:21) 
-- CODE:
from numpy import*

vet1 = array(eval(input("vetor1: ")))
vet2 = array(eval(input("vetor2: ")))
vetn = zeros(3, dtype=int)

for elemento in range(size(vet1)):
	if(vet1[elemento] > vet2[elemento]):
		vetn[0] = vetn[0] + 1
	elif(vet1[elemento] == vet2[elemento]):
		vetn[1] = vetn[1] + 1
	elif(vet1[elemento] < vet2[elemento]):
		vetn[2] = vetn[2] + 1
print(vetn)
-- EXECUTION TIME:
1.10757
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
